# midie

./: Cargo.toml  main.glade  settings.glade  test_midi0.mid
src/: lib.rs  main.rs
src/data/: mod.rs
src/gui/: eventlist.rs  mainwindow.rs  mod.rs  pianoroll.rs
src/smf/: mod.rs  play.rs  util.rs
